<resources>
    <string name="app_name">SOSK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="logIn">Zaloguj</string>
    <string name="loginDataIncorrect">Podana nazwa użytkownika lub hasło są nieprawidłowe</string>
    <string name="loginLabel">Logowanie</string>
    <string name="loginRememberMe">Pamiętaj mnie na tym urządzeniu</string>
    <string name="loginRemindPassword">Nie pamiętasz hasła?</string>
    <string name="title_activity_student_main_screen">SOSK - Moje kursy</string>
    <string name="myCourses">Moje kursy</string>
    <string name="courseNameLabel">Nazwa kursu</string>
    <string name="statusLabel">Status</string>
    <string name="logout">Wyloguj</string>
    <string name="loggedAs">Jesteś zalogowany jako:</string>
    <string name="title_activity_sign_up_for_course">Zapisz się na kurs</string>
    <string name="title_activity_teacher_main_screen">SOSK - Start</string>
    <string name="title_activity_student_course_screen">Szczegóły kursu</string>
    <string name="category">Kategoria</string>
    <string name="start_date">Data rozpoczęcia</string>
    <string name="sign_up">Zapisz się</string>
    <string name="action_logout">Wyloguj</string>
    <string name="title_activity_student_schedule">Harmonogram</string>
    <string name="title_activity_student_lectures">Zajęcia teoretyczne</string>
    <string name="title_activity_student_practical_lessons">Zajęcia praktyczne</string>
    <string name="course_name_temp">Nazwa kursu</string>
    <string name="date_time">Data i godzina</string>
    <string name="class_type">Typ zajęć</string>
    <string name="teacher_tip">Uwaga instruktora</string>
    <string name="date">Data</string>
    <string name="title_activity_teacher_course_screen">Szczegóły kursu</string>
    <string name="title_activity_teacher_schedule">Harmonogram</string>
    <string name="title_activity_teacher_practical_lessons">Zajęcia praktyczne</string>
    <string name="title_activity_teacher_lectures">Zajęcia teoretyczne</string>
    <string name="student">Kursant</string>
    <string name="percentage_of_presence">% obecności</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_teacher_student_screen">Kursant - szczegóły</string>
    <string name="first_name_last_name">Imię i nazwisko</string>
    <string name="sign_up_for_new_course">Zapisz się na nowy kurs</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="title_activity_teacher_add_tip_screen">Dodaj uwagę do jazdy</string>
    <string name="send">Wyślij</string>
    <string name="tip_content">Treść uwagi</string>
    <string name="practical_lesson_date">Data jazdy</string>
    <string name="title_activity_about_screen">O aplikacji</string>
    <string name="about_application">O aplikacji</string>
    <string name="about_application_content">Niniejsza aplikacja jest przedmiotem pracy dyplomowej studentów Politechniki Lubelskiej oraz jest integralną częścią strony internetowej dostępnej pod adresem:</string>
    <string name="sosk_link">http://sosk.pl</string>
    <string name="city">Miejscowość / Miasto</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="email">Email</string>
    <string name="in_progress">W trakcie</string>
    <string name="finished">Zakończony</string>
    <string name="not_started">Nie rozpoczęty</string>
</resources>
