<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.damianmarkowski.sosk.StudentMainScreen"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_content_bg"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:text="@string/in_progress"
                    android:visibility="gone"
                    android:id="@+id/inProgressTextView"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewCoursesInProgress"
                    android:layout_marginTop="10dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="10.0sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:text="@string/not_started"
                    android:visibility="gone"
                    android:id="@+id/notStartedTextView"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewCoursesNotStarted"
                    android:layout_marginTop="10dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="10.0sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:text="@string/finished"
                    android:visibility="gone"
                    android:id="@+id/finishedTextView"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewCoursesFinished"
                    android:layout_marginTop="10dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="10.0sp"/>

            </LinearLayout>



        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_for_new_course"
            android:background="@drawable/sign_up_for_course_bg"
            android:id="@+id/signUpForNewCourse"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress" >
    </ProgressBar>

</RelativeLayout>